--- a/src/pages/profiles/[slug].astro
+++ b/src/pages/profiles/[slug].astro
@@ -41,14 +41,14 @@ const user = {
     <div class="profile-content">
       <div class="blogs">Blogs Posted</div>
       <div class="events">Event Card</div>
-      <div class="certificates">Certificates</div>
+     
     </div>
   </section>
 </Layout>
 
 <style>
   .profile-container {
-    padding: 20px;
+    padding: 5rem;
     background-color: #0000; /* Transparent background */
     display: flex;
     flex-direction: column;
@@ -158,10 +158,10 @@ const user = {
 
   .profile-content {
     display: flex;
-    flex-direction: column;
+   
     align-items: center;
     padding: 20px;
-    gap: 20px;
+    gap: 2rem;
     width: 100%;
     max-width: 900px;
   }
