--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { githubLink, instagramLink, linkedinLink } from '@lib/constants';
 import { Icon } from 'astro-icon/components';
 ---
 
-<footer class="content-container tracking-wider pt-8 text-center md:text-left mt-20" transition:persist>
+<footer id="footer" class="content-container tracking-wider pt-8 text-center md:text-left mt-20" transition:persist>
   <hr class="my-2" />
   <div class="flex flex-col flex-wrap md:flex-row md:flex-nowrap md:items-center lg:items-start py-2 mx-4 md:mx-14">
     <div class="m-6 flex flex-grow md:mt-0 md:pl-20">
