--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,16 +22,12 @@ import Benifits from '@components/landing/Benifits.astro';
 
       <div class="w-full flex items-center justify-between">
         <a href="/blogs" class="animated-btn"><span>Blogs</span></a>
-        <a href="/Footer" class="animated-btn"><span>Get in touch</span></a>
+        <a href="#footer" class="animated-btn"><span>Get in touch</span></a>
       </div>
     </section>
 
     <!-- video -->
-    <section class="content-container grid place-content-center py-20 h-fit w-full">
-      <video class="m-auto w-full h-fit rounded-3xl object-cover" muted autoplay loop>
-        <source src="/acelogointro.mp4" type="video/mp4" />
-      </video>
-    </section>
+    
 
     <!-- gallery preview -->
     <Gallery />
