--- a/src/pages/profiles/edit/index.astro
+++ b/src/pages/profiles/edit/index.astro
@@ -1,8 +1,8 @@
 ---
 import { getSession } from 'auth-astro/server';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@layouts/Layout.astro';
 import { getUser } from 'utils/getUser';
-import '../styles/global.css';
+import '../../../styles/global.css';
 
 const session = await getSession(Astro.request);
 const user = await getUser(session?.user?.id as string);
@@ -17,8 +17,11 @@ console.log( session);
     <!-- Edit User Form -->
     <form id="editUserForm" class="form-container mt-8">
       <h3>Edit User Info</h3>
-      <label for="id">User ID:</label>
+      <div class="hidden">
+        <label for="id">User ID:</label>
       <input type="text" id="id" name="id" value={session?.user?.id} required />
+      </div>
+      
 
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" value={session?.user?.name} required />
