--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,12 +36,12 @@ import { Icon } from 'astro-icon/components';
     <p class="px-2 md:px-5 py-2 md:py-5 text-center md:text-start">
       ACE © {new Date().getFullYear()}
     </p>
-    <img src="/images/top-button.svg" alt="top" class="w-12 md:w-auto mx-auto md:mx-0" />
+    <img src="/images/top-button.svg" alt="top" class="w-12 md:w-auto mx-auto md:mx-0 scrollTop cursor-pointer" />
   </div>
 </footer>
 
 <div class="torch relative w-full h-fit hidden md:block mb-4">
-  <img src="/images/aceweb2.png" alt="ACE" class="object-center torch-img w-full md:w-auto mx-auto object-fill" />
+  <img src="/images/aceweb2.png" alt="ACE" class="object-center torch-img w-full md:w-auto mx-auto object-fill"/>
 </div>
 
 <style>
@@ -104,6 +104,9 @@ import { Icon } from 'astro-icon/components';
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
+    document.querySelector(".scrollTop")?.addEventListener("click",()=>{
+      window.scrollTo({top:0,behavior:"smooth"});
+    })
     const torchDiv = document.querySelector<HTMLDivElement>('.torch');
     torchDiv?.addEventListener('mousemove', (e) => {
       const xPercentage = Math.round((e.offsetX / torchDiv.getBoundingClientRect().width) * 100);
