feat: events & blogs in profile

--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -22,7 +22,7 @@ const {eventName,category,date,venue,id,state,maxTeamSize,className}=Astro.props
   <div class="card-image w-full h-[50%] max-h-[50%] overflow-hidden">
     <img 
     class="h-full object-center w-full object-fill"
-    src="images/sample.png"
+    src="/src/assets/images/sample.png"
 />
   </div>
    
