mobile view: team,gallery,404

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,9 @@ import Layout from '@layouts/Layout.astro';
 ---
 
 <Layout>
-  <main class="pt-28 h-[95vh] w-full overflow-hidden flex flex-col gap-4 items-center justify-center text-center">
+  <main
+    class="p-10 md:p-0 pt-28 h-[95vh] w-full overflow-hidden flex flex-col gap-4 items-center justify-center text-center"
+  >
     <img src="/images/cock.gif" alt="gif_ing" />
     <h3 class="font-dirtyline text-4xl font-bold">404 Error</h3>
     <h3 class="font-dirtyline text-4xl font-bold">Or who knows this page is gone</h3>
