--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,15 +9,15 @@ import { Icon } from 'astro-icon/components';
     <div class="m-6 flex flex-grow md:mt-0 md:pl-20">
       <div class="w-full p-4 px-4 md:w-1/2 lg:w-1/2">
         <div class="social-links flex flex-col gap-4 text-white">
-          <a class="flex gap-4 items-center" href={githubLink} target="_blank">
+          <a class="flex gap-4 items-center" href="https://github.com/ACE-NMAMIT" target="_blank">
             <Icon name="mdi:github" size={30} />
             <span>GitHub</span>
           </a>
-          <a class="flex gap-4 items-center" href={linkedinLink} target="_blank">
+          <a class="flex gap-4 items-center" href="https://www.linkedin.com/company/acenmamit/" target="_blank">
             <Icon name="mdi:linkedin" size={30} />
             <span>LinkedIn</span>
           </a>
-          <a class="flex gap-4 items-center" href={instagramLink} target="_blank">
+          <a class="flex gap-4 items-center" href="https://www.instagram.com/ace_nmamit/" target="_blank">
             <Icon name="mdi:instagram" size={30} />
             <span>Instagram</span>
           </a>
