--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/Layout.astro';
 ---
 
-<Layout>
+<Layout title='ACE'>
   <main class="pt-28 h-[95vh] w-full overflow-hidden flex flex-col gap-4 items-center justify-center text-center">
     <img src="/images/cock.gif" alt="gif_ing" />
     <h3 class="font-dirtyline text-4xl font-bold">404 Error</h3>
