--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -20,7 +20,7 @@ const blogs = await db
   .innerJoin(userTable, eq(blogTable.authorId, userTable.id));
 ---
 
-<Layout title="blogs">
+<Layout title=" ACE blogs">
   <main class="content-container">
     <section class="mt-16 flex flex-col items-center">
       <div class="lg:py-18 py-12 sm:py-14 md:py-16 xl:py-20 flex flex-col items-center gap-6 text-center">
