--- a/src/pages/events/[slug].astro
+++ b/src/pages/events/[slug].astro
@@ -21,7 +21,7 @@ const {name,email,id} = Astro.locals;
 
 ---
 
-<Layout>
+<Layout title='ACE'>
   <section class="content-container mx-auto mt-28">
     <h1 class="title text-6xl text-center mb-4 font-dirtyline">{event.name}</h1>
     <div class="container mx-auto">
