--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -15,7 +15,7 @@ if (!events) {
 let currentTab = 'published';
 ---
 
-<Layout>
+<Layout title='ACE'>
   <section class="hero content-container min-h-screen mt-20 flex flex-col items-center">
     <h1 class="text-6xl mb-8 font-dirtyline">Events</h1>
 
