--- a/src/pages/profiles/[slug].astro
+++ b/src/pages/profiles/[slug].astro
@@ -21,7 +21,7 @@ const tabNames=["events","blogs"];
 
 ---
 
-<Layout>
+<Layout title='ACE'>
   <section class="profile-container">
     <!-- Profile Header -->
     <div class="profile-header">
