--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -90,7 +90,7 @@ await Astro.glob('/src/assets/images/team/*.webp').then((files) => {
 images['sample'] = sample;
 ---
 
-<Layout>
+<Layout title="ACE">
   <section class="tabs content-container tabs mt-28">
     <ul>
       {
