--- a/src/pages/developers.astro
+++ b/src/pages/developers.astro
@@ -142,7 +142,7 @@ await Astro.glob('/src/assets/images/developers/*.{jpg,png}').then((files) => {
 });
 ---
 
-<Layout>
+<Layout title='ACE'>
   <main class="content-container">
     <div class="mt-32 flex flex-col gap-8 items-center">
       <h2 class="fade-up uppercase text-6xl text-center font-dirtyline">Meet the dev team</h2>
