--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -37,36 +37,36 @@ await Astro.glob('/src/assets/images/sample.png').then((files) => {
 });
 
 ---
-
 <section class="benifits-section content-container event-section h-fit mb-16 overflow-hidden">
   <div
-    class="marquee-container overflow-visible w-[100%] relative whitespace-nowrap h-[70vh] flex justify-center text-9xl flex-col gap-0"
+    class="marquee-container overflow-visible w-full relative whitespace-nowrap h-[50vh] md:h-[70vh] flex justify-center text-7xl md:text-9xl flex-col gap-0"
   >
     <h1 class="marquee-text-1 inline-block whitespace-nowrap font-dirtyline font-medium">Explore</h1>
-    <h1 class="marquee-text-2 inline-block whitespace-nowrap font-dirtyline font-medium absolute top-[56%]">More</h1>
+    <h1 class="marquee-text-2 inline-block whitespace-nowrap font-dirtyline font-medium absolute top-[56%]">
+      More
+    </h1>
   </div>
   <div class="flex flex-col h-fit gap-8 cards-grid">
-    {
-      cards.map((card) => (
-        <div class="benifit-row flex flex-col md:flex-row items-center justify-between flex-wrap gap-4">
-          <Image
-            src={images[card.image]}
-            alt={card.title}
-            class="benifit-card interactable max-w-[600px] object-cover object-center"
-            data-type="link"
-          />
-          <div class="grid place-content-center">
-            <div class="benifit-text">
-              <h5 class="font-dirtyline text-6xl">{card.title}</h5>
-              <p class="text-lg">{card.content}</p>
-              <button>Test</button>
-            </div>
+    {cards.map((card) => (
+      <div class="benifit-row flex flex-col md:flex-row items-center justify-between gap-4">
+        <Image
+          src={images[card.image]}
+          alt={card.title}
+          class="benifit-card interactable max-w-[300px] md:max-w-[600px] object-cover object-center"
+          data-type="link"
+        />
+        <div class="grid place-content-center w-full md:w-auto">
+          <div class="benifit-text text-center md:text-left px-4 md:px-0">
+            <h5 class="font-dirtyline text-4xl md:text-6xl">{card.title}</h5>
+            <p class="text-base md:text-lg">{card.content}</p>
+            <button class="mt-4 px-4 py-2 bg-blue-500 text-white rounded-md">Test</button>
           </div>
         </div>
-      ))
-    }
+      </div>
+    ))}
   </div>
 </section>
+
 
 <style>
   @media (min-width: 1024px) {
@@ -102,7 +102,7 @@ await Astro.glob('/src/assets/images/sample.png').then((files) => {
       },
       {
         x: end1X,
-        backgroundPosition: '55% 0', // Animate background to the left
+        backgroundPosition: '0% 0%', // Animate background to the left
         ease: 'none',
         scrollTrigger: {
           trigger: '.benifits-section .marquee-container',
