--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,31 +3,28 @@ import Gallery from '@components/landing/Gallery.astro';
 import Layout from '../layouts/Layout.astro';
 import Events from '@components/landing/Events.astro';
 import Testimonial from '@components/landing/Testimonials.astro';
-import FluidEffect from '@components/FluidEffect.astro';
 import Benifits from '@components/landing/Benifits.astro';
 ---
 
 <Layout title="ACE">
   <main>
     <!-- hero -->
-    <section class="hero content-container flex flex-col items-center justify-between py-6 md:py-16">
-      <div></div>
+    <section class="hero content-container flex flex-col items-center justify-between py-16">
+      <div class="max-[240px]:h-20" ></div>
       <div class="text-center space-y-4">
-        <h3 class="title-glow font-dirtyline text-7xl">Association of computer Engineers</h3>
-        <p class="m-auto max-w-80 text-sm">
-          Hub of innovation in Computer Science & Engineering, where we fuel your passion for learning, boost your
-          career, and work together to uplift the community.
+        <h3 class="title-glow font-dirtyline text-5xl md:text-7xl">
+          Association of Computer Engineers
+        </h3>
+        <p class="m-auto max-w-md md:max-w-80 text-xs md:text-sm">
+          Hub of innovation in Computer Science & Engineering, where we fuel your passion for learning, boost your career, and work together to uplift the community.
         </p>
       </div>
 
-      <div class="w-full flex items-center justify-between">
+      <div class="w-full flex flex-col md:flex-row items-center justify-between space-y-4 md:space-y-0 md:space-x-4">
         <a href="/blogs" class="animated-btn"><span>Blogs</span></a>
         <a href="#footer" class="animated-btn"><span>Get in touch</span></a>
       </div>
     </section>
-
-    <!-- video -->
-    
 
     <!-- gallery preview -->
     <Gallery />
@@ -36,7 +33,9 @@ import Benifits from '@components/landing/Benifits.astro';
 
     <!-- events -->
     <Events />
-    <h3 class="title-glow font-dirtyline lowercase text-6xl" style="text-align: center;">Words from the Wise</h3>
+    <h3 class="title-glow font-dirtyline lowercase text-3xl md:text-6xl text-center">
+      Words from the Wise
+    </h3>
     <Testimonial />
   </main>
 </Layout>
@@ -57,7 +56,7 @@ import Benifits from '@components/landing/Benifits.astro';
   }
 
   .animated-btn span {
-    @apply border-2 border-blue-500 p-4 px-8 w-48 text-center;
+    @apply border-2 border-blue-500 p-2 md:p-4 px-4 md:px-8 w-40 md:w-48 text-center;
     border-radius: 9999px;
     position: relative;
     z-index: 1;
@@ -130,8 +129,14 @@ import Benifits from '@components/landing/Benifits.astro';
 <style is:global>
   section {
     width: 100%;
-    height: 100vh;
+    height: auto;
     min-height: 400px;
+    padding: 1rem;
+  }
+
+  @media (min-width: 768px) {
+    section {
+      height: 100vh;
+    }
   }
 </style>
-  
