pre final touches --- pt 1

--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -1,26 +1,27 @@
 ---
 const testimonials = [
-  { name: 'Rakshith', message: 'Shhh I see dead people', imageUrl: 'images/profile.jpg' },
-  { name: 'Karthik', message: '@Varshith layout fixed; If they give attendence im in', imageUrl: 'images/profile.jpg' },
-  { name: 'Varshith', message: 'Karthik help me fix this layout', imageUrl: 'images/profile.jpg' },
-  { name: 'Ravi', message: 'bro im getting cut out', imageUrl: 'images/profile.jpg' },
-  { name: 'Ananth', message: 'kys', imageUrl: 'images/profile.jpg' },
-  { name: 'Dilshan', message: 'bomb people', imageUrl: 'images/profile.jpg' },
-  { name: 'bhavya', message: 'retired CR', imageUrl: 'images/profile.jpg' },
-  { name: 'chinmay billawa', message: 'im out of closet', imageUrl: 'images/profile.jpg' },
-  { name: 'chinmayeee', message: 'sings', imageUrl: 'images/profile.jpg' },
-  { name: 'akhil', message: 'fk all im busy', imageUrl: 'images/profile.jpg' },
-  { name: 'Varun pai', message: 'if flutter im in', imageUrl: 'images/profile.jpg' },
+  
+  { name: 'Karthik', message: '@Varshith layout fixed; If they give attendence im in', imageUrl: 'images/sample.png' },
+  { name: 'Avaneesh', message: 'If youre into solving probs and building sick stuff, this is where the magic happens!', imageUrl: 'images/sample.png' },
+  { name: 'Shashank B N', message: 'Use VIM', imageUrl: 'images/sample.png' },
+  { name: 'Satwik Prabhu', message: 'i know where you live', imageUrl: 'images/sample.png' },
+  { name: 'Dilshan', message: 'bomb people', imageUrl: 'images/sample.png' },
+  { name: 'Dilshan', message: 'Getting ignored', imageUrl: 'images/sample.png' },
+  { name: 'Vasudha Bhat', message: 'Association of Computer Engineers (ACE ) is a dedicated organisation for Computer Science department.  Dedicated organisation that helps students to develop both Technical and non-technical skills including Sports. It was always great working with ACE. Thanks for the opportunity', imageUrl: 'images/sample.png' },
+  { name: 'Varshith Pawar H R', message: ' https://orm.drizzle.team/', imageUrl: 'images/sample.png' },
+  { name: 'akhil', message: 'will never know!!', imageUrl: 'images/profile.jpg' },
   {
-    name: 'Varun pai',
+    name: 'Prashasti Pandey',
     message:
-      'Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequuntur molestias placeat. Repellat quod laudantium fuga, expedita saepe aspernatur vitae ducimus possimus accusamus nobis, dolorum officiis praesentium sint, ratione voluptatum?',
-    imageUrl: 'images/profile.jpg',
+      'ACE was an amazing experience at nitte, right from starting the face space to sitting at the budget meetings for our incridea events , from organising Improv to making rangolis for ayudh puja from planning freshers to receiving our farewell, we shared good memories . P.S. youll always be good books of every proff.  Also , plan your events before that one branch implements it ;)m?',
+    imageUrl: 'images/sample.png',
   },
+  { name: 'Varun pai', message: 'Learn Flutter', imageUrl: 'images/sample.png' },
+  
 ];
 ---
 <!-- use h-fit to make all cards visible -->
-<section class="content-container overflow-hidden h-[70vh]">
+<section class="content-container overflow-hidden h-[85vh]">
   <ul class="mx-auto w-fit columns-1 md:columns-2 lg:columns-3 ">
     {
       testimonials.map((testimonial) => (
