--- a/src/pages/developers.astro
+++ b/src/pages/developers.astro
@@ -51,18 +51,18 @@ const developers = [
   {
     name: 'Ameesha Ruzario',
     description: '"Answer the joy"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/ameesha-ruzario-152086286/',
+    githubLink: 'https://github.com/AmeeshaRuzario',
+    instagramLink: 'https://www.instagram.com/_ameesha_0118?igsh=MWFsNTd1MjlxMzBxOA==',
     frontImage: 'ameesha',
     backImage: 'ameeshaanime',
   },
   {
     name: 'Bhavya Nayak',
     description: '"A retired CR"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'www.linkedin.com/in/bhavyanayak/',
+    githubLink: 'github.com/BhavyaNayak04',
+    instagramLink: 'www.instagram.com/bhv_nayak/',
     frontImage: 'bhavya',
     backImage: 'bhavyaanime',
   },
@@ -96,18 +96,18 @@ const developers = [
   {
     name: 'Chinmay Billawa',
     description: '"What is life?"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/chinmay-billava-10954424b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app',
+    githubLink: 'https://github.com/chinmay-b05',
+    instagramLink: 'https://www.instagram.com/chinmaybillava?igsh=aTdxdWd2dTBkd2Zi',
     frontImage: 'Chinmay Dinesh Billava',
     backImage: 'chinmayanime',
   },
   {
     name: 'Dilshan',
     description: '"I also dont know!!"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'www.linkedin.com/in/dilshan-dsouza-676006211',
+    githubLink: 'https://github.com/DrioD7',
+    instagramLink: 'https://www.instagram.com/invites/contact/?igsh=1kb62dcdxmwex&utm_content=8uzxuto',
     frontImage: 'Dilshan',
     backImage: 'dilshananime',
   },
