fix: homepage responsiveness

--- a/src/components/landing/Gallery.astro
+++ b/src/components/landing/Gallery.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import sample from '../../assets/images/sample.png'
 ---
-<section class="overflow-hidden gallery-parent">
+<section class="overflow-hidden gallery-parent hidden md:block">
   <div class="gallery-container w-full h-full space-y-4">
     <div class="flex gap-4 h-[75%] m-auto image-row">
       <Image src={sample} alt="fndf" />
