--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -52,7 +52,7 @@ await Astro.glob('/src/assets/images/sample.png').then((files) => {
         <Image
           src={images[card.image]}
           alt={card.title}
-          class="benifit-card interactable max-w-[300px] md:max-w-[600px] object-cover object-center"
+          class="benifit-card interactable max-w-[350px] lg:max-w-[600px] object-cover object-center"
           data-type="link"
         />
         <div class="grid place-content-center w-full md:w-auto">
