pre final touch part --3

--- a/src/components/BlogEditor.astro
+++ b/src/components/BlogEditor.astro
@@ -35,7 +35,7 @@ if (id != 'new') {
 
 <Layout title="Create Recipe">
   <form class="flex flex-col gap-4 mx-auto max-w-[500px] p-4 bg-gray-800 shadow-lg rounded-lg" enctype="multipart/form-data" id="blog-form">
-    <h3 class="text-2xl font-bold mb-4 text-white">Create Recipe</h3>
+    <h3 class="text-2xl font-bold mb-4 text-white">Cook a blog</h3>
     
     <label class="flex flex-col gap-2">
       <span class="text-lg font-semibold text-gray-300">Title</span>
