--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -25,7 +25,7 @@ const blogs = await db
     <section class="mt-16 flex flex-col items-center">
       <div class="lg:py-18 py-12 sm:py-14 md:py-16 xl:py-20 flex flex-col items-center gap-6 text-center">
         <h1 class="fade-up uppercase text-6xl mx-auto max-w-screen-lg font-dirtyline">ACE BLOGS</h1>
-        <p class="fade-up text-gray-200 font-syne-variable">Where creativity meets curiosity!</p>
+        <p class="fade-up text-gray-200 font-syne-variable"> <a href="/blogs/new"> Where creativity meets curiosity! click here to start writing </a></p>
       </div>
 
       <div class="flex lg:flex-row flex-col-reverse gap-11">
