fixed blog view

--- a/src/pages/blogs/[slug].astro
+++ b/src/pages/blogs/[slug].astro
@@ -77,21 +77,19 @@ if (session?.user?.id) {
   }
 }
 
-
 let user: {
-    id: string;
-    image: string | null;
-    name: string;
-  }|null=null;
+  id: string;
+  image: string | null;
+  name: string;
+} | null = null;
 
-if(session?.user?.id){
+if (session?.user?.id) {
   user = {
-    id:session!.user!.id,
-    name:session!.user!.name!,
-    image:session!.user!.image!
-  }
+    id: session!.user!.id,
+    name: session!.user!.name!,
+    image: session!.user!.image!,
+  };
 }
-
 
 //comments
 const comments = await db
@@ -126,7 +124,11 @@ const comments = await db
               }).format(new Date(blog.createdAt))
             }</time
           >
-          <h1 class="text-4xl font-bold text-center">{blog.title}</h1>
+          <div class="w-full max-w-[80%]">
+            <h1 class="text-4xl font-bold text-center text-wrap break-words">
+              {blog.title}
+            </h1>
+          </div>
 
           <a href={`/profile/${blog.authorId}`} class="flex items-center gap-2 text-gray-300">
             <span>By</span>
@@ -138,20 +140,23 @@ const comments = await db
         </section>
 
         <hr class="border-gray-700 w-full -mx-20" />
-        <article class="min-w-full text-justify text-gray-400 leading-7" set:html={blog.content} />
+        <article
+          class="min-w-full indent-10 capitalize text-justify text-gray-400 leading-7 break-words max-w-[90%] mx-auto"
+        >
+          {blog.description}
+        </article>
         <hr class="border-gray-700 w-full -mx-20" />
         <div class="flex gap-8 items-center mr-auto">
           <button class="text-center" id="likeButton" data-blogid={blog.id}>
             <Icon name="mdi:heart" size={20} class={`inline-block mr-2 ${liked ? 'liked' : ''}`} />
             <span class="text-white">{likeCount ?? 0}</span>
-            </button
-          >
+          </button>
           <span class="text-center"
             ><Icon name="mdi:eye" size={20} class:list={'inline-block mr-2'} />{viewCount ?? 0}</span
           >
         </div>
 
-        <Comments blogId={blog.id.toString()} comments={comments} client:visible user={user}/>
+        <Comments blogId={blog.id.toString()} comments={comments} client:visible user={user} />
       </div>
     </div>
   </main>
