--- a/src/pages/blogs/[slug].astro
+++ b/src/pages/blogs/[slug].astro
@@ -156,7 +156,7 @@ const comments = await db
           >
         </div>
 
-        <Comments blogId={blog.id.toString()} comments={comments} client:visible user={user} />
+        <!-- <Comments blogId={blog.id.toString()} comments={comments} client:visible user={user} /> -->
       </div>
     </div>
   </main>
