--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -2,8 +2,8 @@
 import Layout from '@layouts/Layout.astro';
 import BlogCard from '@components/BlogCard.astro';
 
-import { db } from "@lib/db";
-import { blogTable, userTable } from "@lib/db/schema";
+import { db } from '@lib/db';
+import { blogTable, userTable } from '@lib/db/schema';
 import { eq } from 'drizzle-orm';
 
 const blogs = await db
@@ -14,9 +14,10 @@ const blogs = await db
     description: blogTable.description,
     createdAt: blogTable.createdAt,
     authorId: blogTable.authorId,
-    authorName:userTable.name,
-    authorImage:userTable.image,
-  }).from(blogTable)
+    authorName: userTable.name,
+    authorImage: userTable.image,
+  })
+  .from(blogTable)
   .innerJoin(userTable, eq(blogTable.authorId, userTable.id));
 ---
 
@@ -25,7 +26,9 @@ const blogs = await db
     <section class="mt-16 flex flex-col items-center">
       <div class="lg:py-18 py-12 sm:py-14 md:py-16 xl:py-20 flex flex-col items-center gap-6 text-center">
         <h1 class="fade-up uppercase text-6xl mx-auto max-w-screen-lg font-dirtyline">ACE BLOGS</h1>
-        <p class="fade-up text-gray-200 font-syne-variable"> <a href="/blogs/new"> Where creativity meets curiosity! click here to start writing </a></p>
+        <p class="fade-up text-gray-200 font-syne-variable">
+          <a href="/blogs/new"> Where creativity meets curiosity! click here to start writing </a>
+        </p>
       </div>
 
       <div class="flex lg:flex-row flex-col-reverse gap-11">
