--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -5,11 +5,11 @@ const testimonials = [
   { name: 'Avaneesh', message: 'If youre into solving probs and building sick stuff, this is where the magic happens!', imageUrl: 'images/sample.png' },
   { name: 'Shashank B N', message: 'Use VIM', imageUrl: 'images/sample.png' },
   { name: 'Satwik Prabhu', message: 'i know where you live', imageUrl: 'images/sample.png' },
-  { name: 'Dilshan', message: 'bomb people', imageUrl: 'images/sample.png' },
-  { name: 'Dilshan', message: 'Getting ignored', imageUrl: 'images/sample.png' },
+  { name: 'wisdom--1', message: 'Fullfill 85% attendance criteria', imageUrl: 'images/sample.png' },
+  { name: 'Unknown', message: 'Satwik Prabhu is a cutie', imageUrl: 'images/sample.png' },
   { name: 'Vasudha Bhat', message: 'Association of Computer Engineers (ACE ) is a dedicated organisation for Computer Science department.  Dedicated organisation that helps students to develop both Technical and non-technical skills including Sports. It was always great working with ACE. Thanks for the opportunity', imageUrl: 'images/sample.png' },
-  { name: 'Varshith Pawar H R', message: ' https://orm.drizzle.team/', imageUrl: 'images/sample.png' },
-  { name: 'akhil', message: 'will never know!!', imageUrl: 'images/profile.jpg' },
+  { name: 'Varshith Pawar H R', message: ' y I did this format-visit : https://orm.drizzle.team/', imageUrl: 'images/sample.png' },
+  { name: 'akhil', message: 'will never know!!', imageUrl: 'images/sample.png' },
   {
     name: 'Prashasti Pandey',
     message:
@@ -17,11 +17,12 @@ const testimonials = [
     imageUrl: 'images/sample.png',
   },
   { name: 'Varun pai', message: 'Learn Flutter', imageUrl: 'images/sample.png' },
+  { name: 'Ameesha', message: 'Work more on your side projects ', imageUrl: 'images/sample.png' },
   
 ];
 ---
 <!-- use h-fit to make all cards visible -->
-<section class="content-container overflow-hidden h-[85vh]">
+<section class="content-container ">
   <ul class="mx-auto w-fit columns-1 md:columns-2 lg:columns-3 ">
     {
       testimonials.map((testimonial) => (
