--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -4,27 +4,27 @@ import { Image } from "astro:assets";
 const cards = [
   {
     title: 'Workshop',
-    content: 'lorem ddh fdg hfdhgfh f fgd',
+    content: 'Sharpen your skills, because nobody ever built a career with dull tools',
     image: 'sample',
   },
   {
-    title: 'jsddsg',
-    content: 'lorem ddh fdg hfdhgfh f fgd',
+    title: 'Cultural Events',
+    content: 'Join the fun – because life’s too short for boring weekends!',
     image: 'sample',
   },
   {
-    title: 'jsddsg',
-    content: 'lorem ddh fdg hfdhgfh f fgd',
+    title: 'Sports',
+    content: 'Where the game begins and excuses end—play hard or go home!',
     image: 'sample',
   },
   {
-    title: 'jsddsg',
-    content: 'lorem ddh fdg hfdhgfh f fgd',
+    title: 'Project Expo',
+    content: 'Innovations on display—turning ideas into wow!!!',
     image: 'sample',
   },
   {
-    title: 'jsddsg',
-    content: 'lorem ddh fdg hfdhgfh f fgd',
+    title: 'Placement guidence',
+    content: 'From campus to corporate—let’s nail our dream job, one step at a time!',
     image: 'sample',
   },
 ];
