--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -7,5 +7,5 @@ import Layout from "@layouts/Layout.astro"
   <h1>Welcome to admin</h1>
   <p>1. <a href="admin/manageUsers">Manage Users</a></p>
   <p>2. <a href="admin/uploadToGallery">Upload to gallery</a></p>
-  <p>3. <a href="admin/"></a></p>
+  <p>3. <a href="admin/events"></a></p>
 </Layout>
